# hand-OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: analyze_segmentation.py  create_csv.py  create_empty_txt_files.py  deep_analysis.py  export_lines_to_csv.py  trocr-m4.py  visualize_projection.py
ocr-test/: test_tesseract.py  trocr-m4.py
src/app/: API.py  index.html  scripts.js
src/ocr_model/: stage21_line_normalisation.py  stage21_line_segmentation.py  stage21_pdf_to_pages.py  stage21_preprocess_page.py  stage3_inference.py  stage3_train_trocr.py  validate_data.py
