[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_model"
version = "0.1.0"
description = "Handwriting OCR model"
dependencies = [
    "torch>=",
    "opencv-python>=",
    # ... your other dependencies
]

[project.urls]
"Repository" = "https://github.com/SSaVVo88/hand-OCR.git"

[tool.check-manifest]
ignore = [
    "data/*",
]